update - painModifieres for penalties

--- a/src/scss/actor/parts/status.scss
+++ b/src/scss/actor/parts/status.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  .pain-modifiers {
+  .penalties {
     .group-body {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
