--- a/src/templates/actor/parts/settings/parts/advancedCharacteristics.hbs
+++ b/src/templates/actor/parts/settings/parts/advancedCharacteristics.hbs
@@ -48,5 +48,13 @@
         inputName="system.general.settings.perceivePsychic.value"
         inputValue=system.general.settings.perceivePsychic.value
       }}
+    {{>
+      "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+        class="immuneToCritic"
+        title= (localize "anima.ui.settings.advancedCharacteristics.immuneToCritic")
+        inputType="checkbox"
+        inputName="system.general.settings.immuneToCritic"
+        inputValue=system.general.settings.immuneToCritic
+      }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
