--- a/src/scss/actor/parts/mystic.scss
+++ b/src/scss/actor/parts/mystic.scss
@@ -208,28 +208,35 @@
     }
     // Spheres
 
-    // Spell Maintenances
-    .spell-maintenances {
-      .spell-maintenance-row:first-child {
-        margin-top: 0;
-      }
-
-      .spell-maintenance-row {
-        margin-top: 0.75rem;
-
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-column-gap: 0.1rem;
-
-        .name .input-container {
-          width: 100%;
-        }
-      }
-    }
-    // Spell Maintenances
-
     // Maintained Spells
     .maintained-spells {
+
+      .title
+
+      .maintained-spell-title + .hr {
+        display: none
+      }
+
+      .maintained-spell-title{
+        margin-bottom: -0.75rem;
+        display: grid;
+        grid-template-columns: 2fr 0.5fr 3rem;
+        grid-column-gap: 0.1rem;
+        .name {
+          place-self: center;
+        }
+      }
+
+      .maintained-spell-daily-title{
+        margin-top: -0.5rem;
+        margin-bottom: -0.75rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        .name {
+          place-self: center;
+        }
+      }
+
       .maintained-spell-row:first-child {
         margin-top: 0;
       }
@@ -248,6 +255,12 @@
           margin-top: 0;
           width: 100%;
         }
+      }
+      .hr:first-child {
+        display: none
+      }
+      .hr {
+        border-bottom: 1px solid $red;
       }
     }
     // Maintained Spells
