--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -79,10 +79,32 @@ img {
         }
       }
 
+      .group-buttons {
+        position: absolute;
+        top: -0.5rem;
+        right: -0.5rem;
+        z-index: 10;
+
+        i {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          cursor: pointer;
+          background-color: white;
+          width: 1.25rem;
+          height: 1.25rem;
+          border-radius: 50%;
+          border: none;
+
+          transition: background-color 0.3ms ease-in-out;
+
+          &:hover {
+            background-color: $light-gray;
+          }
+        }
+      }
+      // TODO: Next needed for handlebars group contractible handling. Remove when all are in svelte
       .contractible-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
         position: absolute;
         top: -0.5rem;
         right: -0.5rem;
@@ -99,7 +121,11 @@ img {
         &:hover {
           background-color: $light-gray;
         }
-      }
+
+        &.contracted {
+          transform: rotate(180deg);
+        }
+      } // End of removal after svelte
     }
 
     width: 100%;
