svelte5(spell) added edit button to embedded spells in ActorSheet

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -95,6 +95,7 @@ img {
           height: 1.25rem;
           border-radius: 50%;
           border: none;
+          margin-bottom: 3px;
 
           transition: background-color 0.3ms ease-in-out;
 
