--- a/src/scss/dialog/generic-dialog.scss
+++ b/src/scss/dialog/generic-dialog.scss
@@ -92,7 +92,7 @@
     overflow: visible !important;
     background: 0;
 
-    #svelte-app {
+    .svelte-combat {
       margin-top: -30px;
       margin-left: -30px;
     }
