Modify Seals, removing earth and adding Fire

--- a/src/templates/actor/parts/domine/parts/seals.hbs
+++ b/src/templates/actor/parts/domine/parts/seals.hbs
@@ -13,24 +13,24 @@
   }}
     <div class='red-background'></div>
     <div class='seal-row'>
-      <p class='label seal-row-title'>{{localize "anima.ui.domine.seals.earth.title"}}</p>
+      <p class='label seal-row-title'>{{localize "anima.ui.domine.seals.wood.title"}}</p>
 
       {{>
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        class="minor-earth-seal minor-seal"
+        class="minor-wood-seal minor-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.minor.earth.isActive.value"
-        inputValue=system.domine.seals.minor.earth.isActive.value
+        inputName="system.domine.seals.minor.wood.isActive.value"
+        inputValue=system.domine.seals.minor.wood.isActive.value
       }}
 
       {{>
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        class="major-earth-seal major-seal"
+        class="major-wood-seal major-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.major.earth.isActive.value"
-        inputValue=system.domine.seals.major.earth.isActive.value
+        inputName="system.domine.seals.major.wood.isActive.value"
+        inputValue=system.domine.seals.major.wood.isActive.value
       }}
     </div>
     <div class='seal-row'>
@@ -47,7 +47,7 @@
 
       {{>
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        class="major-earth-seal major-seal"
+        class="major-metal-seal major-seal"
         hideTitle=true
         inputType="checkbox"
         inputName="system.domine.seals.major.metal.isActive.value"
@@ -68,7 +68,7 @@
 
       {{>
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        class="major-earth-seal major-seal"
+        class="major-wind-seal major-seal"
         hideTitle=true
         inputType="checkbox"
         inputName="system.domine.seals.major.wind.isActive.value"
@@ -89,7 +89,7 @@
 
       {{>
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        class="major-earth-seal major-seal"
+        class="major-water-seal major-seal"
         hideTitle=true
         inputType="checkbox"
         inputName="system.domine.seals.major.water.isActive.value"
@@ -97,24 +97,24 @@
       }}
     </div>
     <div class='seal-row'>
-      <p class='label seal-row-title'>{{localize "anima.ui.domine.seals.wood.title"}}</p>
+      <p class='label seal-row-title'>{{localize "anima.ui.domine.seals.fire.title"}}</p>
 
       {{>
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        class="minor-wood-seal minor-seal"
+        class="minor-fire-seal minor-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.minor.wood.isActive.value"
-        inputValue=system.domine.seals.minor.wood.isActive.value
+        inputName="system.domine.seals.minor.fire.isActive.value"
+        inputValue=system.domine.seals.minor.fire.isActive.value
       }}
 
       {{>
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-        class="major-earth-seal major-seal"
+        class="major-fire-seal major-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.major.wood.isActive.value"
-        inputValue=system.domine.seals.major.wood.isActive.value
+        inputName="system.domine.seals.major.fire.isActive.value"
+        inputValue=system.domine.seals.major.fire.isActive.value
       }}
     </div>
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
