fix: remove `.value` not existing in template.json

--- a/src/templates/actor/parts/domine/parts/seals.hbs
+++ b/src/templates/actor/parts/domine/parts/seals.hbs
@@ -20,8 +20,8 @@
         class="minor-wood-seal minor-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.minor.wood.isActive.value"
-        inputValue=system.domine.seals.minor.wood.isActive.value
+        inputName="system.domine.seals.minor.wood.isActive"
+        inputValue=system.domine.seals.minor.wood.isActive
       }}
 
       {{>
@@ -29,8 +29,8 @@
         class="major-wood-seal major-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.major.wood.isActive.value"
-        inputValue=system.domine.seals.major.wood.isActive.value
+        inputName="system.domine.seals.major.wood.isActive"
+        inputValue=system.domine.seals.major.wood.isActive
       }}
     </div>
     <div class='seal-row'>
@@ -41,8 +41,8 @@
         class="minor-metal-seal minor-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.minor.metal.isActive.value"
-        inputValue=system.domine.seals.minor.metal.isActive.value
+        inputName="system.domine.seals.minor.metal.isActive"
+        inputValue=system.domine.seals.minor.metal.isActive
       }}
 
       {{>
@@ -50,8 +50,8 @@
         class="major-metal-seal major-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.major.metal.isActive.value"
-        inputValue=system.domine.seals.major.metal.isActive.value
+        inputName="system.domine.seals.major.metal.isActive"
+        inputValue=system.domine.seals.major.metal.isActive
       }}
     </div>
     <div class='seal-row'>
@@ -62,8 +62,8 @@
         class="minor-wind-seal minor-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.minor.wind.isActive.value"
-        inputValue=system.domine.seals.minor.wind.isActive.value
+        inputName="system.domine.seals.minor.wind.isActive"
+        inputValue=system.domine.seals.minor.wind.isActive
       }}
 
       {{>
@@ -71,8 +71,8 @@
         class="major-wind-seal major-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.major.wind.isActive.value"
-        inputValue=system.domine.seals.major.wind.isActive.value
+        inputName="system.domine.seals.major.wind.isActive"
+        inputValue=system.domine.seals.major.wind.isActive
       }}
     </div>
     <div class='seal-row'>
@@ -83,8 +83,8 @@
         class="minor-water-seal minor-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.minor.water.isActive.value"
-        inputValue=system.domine.seals.minor.water.isActive.value
+        inputName="system.domine.seals.minor.water.isActive"
+        inputValue=system.domine.seals.minor.water.isActive
       }}
 
       {{>
@@ -92,8 +92,8 @@
         class="major-water-seal major-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.major.water.isActive.value"
-        inputValue=system.domine.seals.major.water.isActive.value
+        inputName="system.domine.seals.major.water.isActive"
+        inputValue=system.domine.seals.major.water.isActive
       }}
     </div>
     <div class='seal-row'>
@@ -104,8 +104,8 @@
         class="minor-fire-seal minor-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.minor.fire.isActive.value"
-        inputValue=system.domine.seals.minor.fire.isActive.value
+        inputName="system.domine.seals.minor.fire.isActive"
+        inputValue=system.domine.seals.minor.fire.isActive
       }}
 
       {{>
@@ -113,8 +113,8 @@
         class="major-fire-seal major-seal"
         hideTitle=true
         inputType="checkbox"
-        inputName="system.domine.seals.major.fire.isActive.value"
-        inputValue=system.domine.seals.major.fire.isActive.value
+        inputName="system.domine.seals.major.fire.isActive"
+        inputValue=system.domine.seals.major.fire.isActive
       }}
     </div>
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
