refactor: move critic types from weapons to generic combat

--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -37,7 +37,7 @@
                 class="critic-secondary"
                 isVertical=true
                 disabled=true
-                choices=xRoot.config.iterables.combat.weapon.criticTypesWithNone
+                choices=xRoot.config.iterables.combat.criticTypesWithNone
                 title=(localize "anima.ui.combat.weapons.critic.secondary.title")
                 inputName=(concat "system.dynamic.weapons." weapon._id ".system.critic.secondary.value")
                 inputValue=weapon.system.critic.secondary.value
@@ -129,7 +129,7 @@
                 isVertical=true
                 disabled=true
                 title=(localize "anima.ui.combat.weapons.critic.primary.title")
-                choices=xRoot.config.iterables.combat.weapon.criticTypes
+                choices=xRoot.config.iterables.combat.criticTypes
                 inputName=(concat "system.dynamic.weapons." weapon._id ".system.critic.primary.value")
                 inputValue=weapon.system.critic.primary.value
               }}
