--- a/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
@@ -90,7 +90,7 @@
               'systems/animabf/templates/common/ui/custom-select-choices.hbs'
                 class="critic"
                 disabled=true
-                choices=xRoot.config.iterables.combat.weapon.criticTypesWithNone
+                choices=xRoot.config.iterables.combat.criticTypesWithNone
                 inputName=(concat "system.dynamic.psychicPowers." power._id ".system.critic.value")
                 inputValue=power.system.critic.value
               }}
