--- a/src/templates/dialog/combat/combat-attack/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/mystic.hbs
@@ -43,7 +43,7 @@
 
 {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
   disabled=this.attackSent
-  choices=config.iterables.combat.weapon.criticTypesWithNone
+  choices=config.iterables.combat.criticTypesWithNone
   title=(localize "macros.combat.dialog.weapon.critic.title")
   inputName='attacker.mystic.critic'
   inputValue=this.attacker.mystic.critic
