--- a/src/templates/items/ammo/ammo.hbs
+++ b/src/templates/items/ammo/ammo.hbs
@@ -20,7 +20,7 @@
       {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
         class="critic"
         isVertical=true
-        choices=config.iterables.combat.weapon.criticTypes
+        choices=config.iterables.combat.criticTypes
         title=(localize "anima.ui.combat.ammo.critic.title")
         inputName="system.critic.value"
         inputValue=system.critic.value
