--- a/src/templates/items/psychicPower/psychicPower.hbs
+++ b/src/templates/items/psychicPower/psychicPower.hbs
@@ -107,7 +107,7 @@
           'systems/animabf/templates/common/ui/custom-select-choices.hbs'
             class="critic"
             title=(localize "anima.ui.psychic.psychicPowers.power.footer.critic.title")
-            choices=xRoot.config.iterables.combat.weapon.criticTypesWithNone
+            choices=xRoot.config.iterables.combat.criticTypesWithNone
             inputName=(concat "system.critic.value")
             inputValue=system.critic.value
           }}
