--- a/src/templates/items/weapon/weapon.hbs
+++ b/src/templates/items/weapon/weapon.hbs
@@ -21,7 +21,7 @@
         {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
           class="critic-primary"
           isVertical=true
-          choices=config.iterables.combat.weapon.criticTypes
+          choices=config.iterables.combat.criticTypes
           title=(localize "anima.ui.combat.weapons.critic.primary.title")
           inputName="system.critic.primary.value"
           inputValue=system.critic.primary.value
@@ -31,7 +31,7 @@
         {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
           class="critic-secondary"
           isVertical=true
-          choices=config.iterables.combat.weapon.criticTypesWithNone
+          choices=config.iterables.combat.criticTypesWithNone
           title=(localize "anima.ui.combat.weapons.critic.secondary.title")
           inputName="system.critic.secondary.value"
           inputValue=system.critic.secondary.value
