--- a/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
@@ -38,7 +38,7 @@
 
 {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
   disabled=this.attackSent
-  choices=config.iterables.combat.weapon.criticTypesWithNone
+  choices=config.iterables.combat.criticTypesWithNone
   title=(localize "macros.combat.dialog.weapon.critic.title")
   inputName='attacker.psychic.critic'
   inputValue=this.attacker.psychic.critic
