--- a/src/templates/dialog/import-data-from-excel.html
+++ b/src/templates/dialog/import-data-from-excel.html
@@ -3,7 +3,7 @@
   <p class="notes">{{hint2}}</p>
   <div class="form-group">
     <label for="data">{{ localize 'DOCUMENT.ImportSource' }}</label>
-    <input type="file" name="data" accept=".xlsm, .xslx, .xls, .csv" />
+    <input type="file" name="data" accept=".xlsm, .xslx, .xls" />
   </div>
 </form>
 
