--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -1,5 +1,5 @@
 // -------------------
-// ------COLORS-------
+// --OLD-COLORS-------
 // -------------------
 
 $red: #6e2917;
@@ -14,3 +14,11 @@ $light-gray: #9f9c87;
 $border-radius: 10px;
 
 $card-box-shadow: 0 0 10px 0 rgb(0 0 0 / 20%);
+
+// -------------------
+// ---NEW-COLORS------
+// -------------------
+
+$border-color: black;
+$background-main: rgb(184, 184, 184);
+$background-secondary: rgb(45, 45, 45);
