Borderless applications added
It is enough to specify window.frame = false and clases:
['animabf-frameless-app'] in application's static DEFAULT_OPTIONS for it
to work as a frameless app. See TestAppV2 in this commit.

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -317,3 +317,11 @@ img {
     }
   }
 }
+
+.animabf-frameless-app {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: fit-content;
+  width: fit-content;
+}
