--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -22,3 +22,5 @@ $card-box-shadow: 0 0 10px 0 rgb(0 0 0 / 20%);
 $border-color: black;
 $background-main: rgb(184, 184, 184);
 $background-secondary: rgb(45, 45, 45);
+$background-light: #f6f6f6;
+$text-color: black;
