--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -18,12 +18,22 @@ $text-color-light: var(--text-color-light, variable.$background-light);
 
 $font-size: var(--font-size, 34px);
 
-@mixin buttonlike {
+@mixin buttonlike() {
   cursor: pointer;
 
   &:hover {
     --background-color: #{$background-active};
     transform: scale(1.02);
+    box-shadow: unset;
+  }
+  &:focus {
+    box-shadow: unset;
+  }
+}
+@mixin noninteractive() {
+  cursor: default;
+
+  &:hover {
     box-shadow: unset;
   }
   &:focus {
